# projektbeta

./: .gitignore  CMakeLists.txt  Readme.md  SchiffeVersenkenZeichen.txt
examples/: demo1.cpp  demo_pybind.cpp  pybind_battleship.cpp
extra/: bs_client.py  bs_server.py  demo_fastapi_1.py  demo_fastapi_2.py  demo_pybind11.py  demo_requests.py
include/battleship/: battleship_board.hpp
include/hangman/: hangman_board.hpp
src/: battleship_board.cpp  hangman_board.cpp
tests/: battleship_board_tests.cpp
